# Find the xtensor bits.
find_package(xtensor REQUIRED CONFIG)
find_package(xtensor-blas REQUIRED CONFIG)

add_library(heyoka_test STATIC catch_main.cpp spdlog_oss.cpp)
target_compile_options(heyoka_test PRIVATE
  "$<$<CONFIG:Debug>:${HEYOKA_CXX_FLAGS_DEBUG}>"
  "$<$<CONFIG:Release>:${HEYOKA_CXX_FLAGS_RELEASE}>"
  "$<$<CONFIG:RelWithDebInfo>:${HEYOKA_CXX_FLAGS_RELEASE}>"
  "$<$<CONFIG:MinSizeRel>:${HEYOKA_CXX_FLAGS_RELEASE}>"
)

# Setup the C++ standard.
target_compile_features(heyoka_test PRIVATE cxx_std_17)
set_property(TARGET heyoka_test PROPERTY CXX_EXTENSIONS NO)
target_link_libraries(heyoka_test PRIVATE spdlog::spdlog)

function(ADD_HEYOKA_TESTCASE arg1)
  add_executable(${arg1} ${arg1}.cpp)
  target_link_libraries(${arg1} PRIVATE heyoka_test heyoka xtensor xtensor-blas fmt::fmt heyoka_llvm_internal Boost::boost)
  target_compile_definitions(${arg1} PRIVATE XTENSOR_USE_FLENS_BLAS)
  target_compile_options(${arg1} PRIVATE
    "$<$<CONFIG:Debug>:${HEYOKA_CXX_FLAGS_DEBUG}>"
    "$<$<CONFIG:Release>:${HEYOKA_CXX_FLAGS_RELEASE}>"
    "$<$<CONFIG:RelWithDebInfo>:${HEYOKA_CXX_FLAGS_RELEASE}>"
    "$<$<CONFIG:MinSizeRel>:${HEYOKA_CXX_FLAGS_RELEASE}>"
  )
  # Setup the C++ standard.
  target_compile_features(${arg1} PRIVATE cxx_std_17)
  set_property(TARGET ${arg1} PROPERTY CXX_EXTENSIONS NO)
  add_test(${arg1} ${arg1})
endfunction()

ADD_HEYOKA_TESTCASE(llvm_state)
ADD_HEYOKA_TESTCASE(expression)
ADD_HEYOKA_TESTCASE(func)
ADD_HEYOKA_TESTCASE(gp)
ADD_HEYOKA_TESTCASE(callable)
ADD_HEYOKA_TESTCASE(variable)
ADD_HEYOKA_TESTCASE(param)
ADD_HEYOKA_TESTCASE(binary_op)
ADD_HEYOKA_TESTCASE(taylor_adaptive)
ADD_HEYOKA_TESTCASE(taylor_t_event)
ADD_HEYOKA_TESTCASE(taylor_nt_event)
ADD_HEYOKA_TESTCASE(taylor_adaptive_batch)
ADD_HEYOKA_TESTCASE(taylor_decompose)
ADD_HEYOKA_TESTCASE(taylor_add_jet)
ADD_HEYOKA_TESTCASE(taylor_div)
# ADD_HEYOKA_TESTCASE(taylor_erf)
# ADD_HEYOKA_TESTCASE(taylor_exp)
# ADD_HEYOKA_TESTCASE(taylor_log)
# ADD_HEYOKA_TESTCASE(taylor_mul)
# ADD_HEYOKA_TESTCASE(taylor_addsub)
# ADD_HEYOKA_TESTCASE(taylor_pow)
# ADD_HEYOKA_TESTCASE(taylor_sqrt)
# ADD_HEYOKA_TESTCASE(taylor_square)
# ADD_HEYOKA_TESTCASE(taylor_sincos)
# ADD_HEYOKA_TESTCASE(taylor_const_sys)
# ADD_HEYOKA_TESTCASE(taylor_no_decomp_sys)
# ADD_HEYOKA_TESTCASE(taylor_tan)
# ADD_HEYOKA_TESTCASE(taylor_time)
# ADD_HEYOKA_TESTCASE(taylor_asin)
# ADD_HEYOKA_TESTCASE(taylor_acos)
# ADD_HEYOKA_TESTCASE(taylor_atan)
# ADD_HEYOKA_TESTCASE(taylor_sigmoid)
# ADD_HEYOKA_TESTCASE(taylor_sinhcosh)
# ADD_HEYOKA_TESTCASE(taylor_tanh)
# ADD_HEYOKA_TESTCASE(taylor_asinh)
# ADD_HEYOKA_TESTCASE(taylor_acosh)
# ADD_HEYOKA_TESTCASE(taylor_atanh)
ADD_HEYOKA_TESTCASE(taylor_neg)
# ADD_HEYOKA_TESTCASE(taylor_kepE)
# ADD_HEYOKA_TESTCASE(taylor_tpoly)
# ADD_HEYOKA_TESTCASE(two_body)
ADD_HEYOKA_TESTCASE(two_body_batch)
ADD_HEYOKA_TESTCASE(e3bp)
ADD_HEYOKA_TESTCASE(fast_math_compare)
ADD_HEYOKA_TESTCASE(back_and_forth)
ADD_HEYOKA_TESTCASE(nbody)
ADD_HEYOKA_TESTCASE(outer_ss)
ADD_HEYOKA_TESTCASE(one_body)
ADD_HEYOKA_TESTCASE(number)
ADD_HEYOKA_TESTCASE(s11n)
ADD_HEYOKA_TESTCASE(erf)
ADD_HEYOKA_TESTCASE(exp)
ADD_HEYOKA_TESTCASE(log)
ADD_HEYOKA_TESTCASE(sigmoid)
ADD_HEYOKA_TESTCASE(pow)
ADD_HEYOKA_TESTCASE(mul)
ADD_HEYOKA_TESTCASE(neg)
ADD_HEYOKA_TESTCASE(cos)
ADD_HEYOKA_TESTCASE(sin)
ADD_HEYOKA_TESTCASE(sqrt)
ADD_HEYOKA_TESTCASE(square)
ADD_HEYOKA_TESTCASE(acos)
ADD_HEYOKA_TESTCASE(asin)
ADD_HEYOKA_TESTCASE(atan)
ADD_HEYOKA_TESTCASE(acosh)
ADD_HEYOKA_TESTCASE(asinh)
ADD_HEYOKA_TESTCASE(atanh)
ADD_HEYOKA_TESTCASE(cosh)
ADD_HEYOKA_TESTCASE(sinh)
ADD_HEYOKA_TESTCASE(tan)
ADD_HEYOKA_TESTCASE(tanh)
ADD_HEYOKA_TESTCASE(kepE)
ADD_HEYOKA_TESTCASE(tpoly)
ADD_HEYOKA_TESTCASE(time)
ADD_HEYOKA_TESTCASE(wavy_ramp)
ADD_HEYOKA_TESTCASE(dfloat_time)
ADD_HEYOKA_TESTCASE(timestep_check)
ADD_HEYOKA_TESTCASE(llvm_helpers)
ADD_HEYOKA_TESTCASE(simplification)
